--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
             try_files $uri =404;
         }
 
-        # Serve index.html for all other routes (for SPA behavior)
+        # Serve index.html for all other routes (for SPA behavior) SPA -Single Page Application
         location / {
             try_files $uri /index.html;
         }
