--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -7,12 +7,10 @@ http {
     keepalive_timeout  65;
 
     # Upstream definitions for microservices
-    upstream service1 {
-        server service1:5000;
+    upstream accessra_microservice {
+        server accessra_microservice:4000;
     }
-    upstream service2 {
-        server service2:5001;
-    }
+  
 
     server {
         listen 80;
@@ -33,18 +31,13 @@ http {
             try_files $uri /index.html;
         }
 
-        # Reverse proxy for Service 1
-        location /api/service1/ {
-            proxy_pass http://service1;
+        # Reverse proxy for accessra_microservice
+        location /api/accessra_microservice/ {
+            rewrite ^/api/accessra_microservice(/.*)$ $1 break; # Remove the prefix from the URL
+            proxy_pass http://accessra_microservice;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Reverse proxy for Service 2
-        location /api/service2/ {
-            proxy_pass http://service2;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
     }
 }
