--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,21 +12,13 @@ services:
       # Mount the built static files
       - ./nginx/statics:/usr/share/nginx/html/statics:ro
     depends_on:
-      - service1
-      - service2
+      - accessra_microservice
+      
 
-  service1:
-    build: ./service1
-    container_name: service1
+  accessra_microservice:
+    build: ./accessra_microservice
+    container_name: accessra_microservice
     environment:
-      - PORT=5000
+      - PORT=4000
     ports:
-      - "5000:5000"
-
-  service2:
-    build: ./service2
-    container_name: service2
-    environment:
-      - PORT=5001
-    ports:
-      - "5001:5001"
+      - "4000:4000"
