--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,22 +6,68 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛎 Checkout code
+        uses: actions/checkout@v3
+
+      - name: 🔒 Create .env in backend root
+        run: |
+          mkdir -p backend
+          cat <<EOF > backend/.env
+          PROD_DB_HOST=${{ secrets.PROD_DB_HOST }}
+          PROD_DB_PORT=${{ secrets.PROD_DB_PORT }}
+          PROD_DB_USERNAME=${{ secrets.PROD_DB_USERNAME }}
+          PROD_DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}
+          PROD_DB_NAME=${{ secrets.PROD_DB_NAME }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          EOF
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          projectBaseDir: .
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_CLOUD_TOKEN }}
+          SONAR_PROJECT_KEY: ChillBroh_Accessra-API
+          SONAR_ORGANIZATION: chillbroh
+
+      - name: Build Docker Image
+        run: docker build -t chillbroh98/accessra .
+
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Publish image to Docker Hub
+        run: docker push chillbroh98/accessra:latest
+
   deploy:
-    # assumes your self-hosted runner has Docker & Docker Compose installed
+    needs: build
     runs-on: self-hosted
     steps:
       - name: 🛎 Checkout code
         uses: actions/checkout@v3
 
-      - name: 🔒 Create .env in accessra_microservice root
+      - name: 🔒 Recreate .env in backend root
         run: |
-          mkdir -p backend/accessra_microservice
-          echo "PROD_DB_HOST=${{ secrets.PROD_DB_HOST }}"      >> backend/accessra_microservice/.env
-          echo "PROD_DB_PORT=${{ secrets.PROD_DB_PORT }}"      >> backend/accessra_microservice/.env
-          echo "PROD_DB_USERNAME=${{ secrets.PROD_DB_USERNAME }}" >> backend/accessra_microservice/.env
-          echo "PROD_DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}" >> backend/accessra_microservice/.env
-          echo "PROD_DB_NAME=${{ secrets.PROD_DB_NAME }}"      >> backend/accessra_microservice/.env
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}"          >> backend/accessra_microservice/.env
+          mkdir -p backend
+          cat <<EOF > backend/.env
+          PROD_DB_HOST=${{ secrets.PROD_DB_HOST }}
+          PROD_DB_PORT=${{ secrets.PROD_DB_PORT }}
+          PROD_DB_USERNAME=${{ secrets.PROD_DB_USERNAME }}
+          PROD_DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}
+          PROD_DB_NAME=${{ secrets.PROD_DB_NAME }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          EOF
 
       - name: 🔍 Detect frontend changes
         id: detect_frontend
@@ -29,12 +75,12 @@ jobs:
           CHANGED=$(git diff --name-only HEAD^ HEAD)
           echo "changed_files=$CHANGED" >> $GITHUB_OUTPUT
 
-      - name: ⚙️ Setup Node.js (for possible frontend build)
+      - name: ⚙️ Setup Node.js (for frontend)
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      - name: 🏗️ Build frontend & sync static assets
+      - name: 🏗️ Build frontend & copy static assets
         if: contains(steps.detect_frontend.outputs.changed_files, 'frontend/')
         run: |
           cd frontend
@@ -43,7 +89,11 @@ jobs:
           rm -rf ../backend/nginx/statics/*
           cp -R dist/* ../backend/nginx/statics/
 
-      - name: 🚀 Deploy with Docker Compose
+      - name: 🔑 Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: 📥 Pull all images & Deploy backend
         working-directory: backend
         run: |
-          docker-compose up -d --build
+          docker-compose pull
+          docker-compose up -d
