--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,13 +27,7 @@ jobs:
 
       - name: Run backend tests
         working-directory: backend/accessra_microservice
-        run: npm test
-
-      - name: Install Frontend dependencies & run tests
-        working-directory: frontend
-        run: |
-          npm ci
-          npm test
+        run: npm test:e2e
 
   build:
     needs: test
