--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run backend tests
         working-directory: backend/accessra_microservice
-        run: npm test:e2e
+        run: npm run test:e2e
 
   build:
     needs: test
