--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,9 +25,26 @@ jobs:
         working-directory: backend/accessra_microservice
         run: npm ci
 
+      - name: Create test env file
+        working-directory: backend/accessra_microservice
+        run: |
+          echo "PROD_DB_HOST=${{ secrets.PROD_DB_HOST }}" > .env
+          echo "PROD_DB_PORT=${{ secrets.PROD_DB_PORT }}" >> .env
+          echo "PROD_DB_USERNAME=${{ secrets.PROD_DB_USERNAME }}" >> .env
+          echo "PROD_DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}" >> .env
+          echo "PROD_DB_NAME=${{ secrets.PROD_DB_NAME }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+
       - name: Run backend tests
         working-directory: backend/accessra_microservice
         run: npm run test:e2e
+        env:
+          PROD_DB_HOST: ${{ secrets.PROD_DB_HOST }}
+          PROD_DB_PORT: ${{ secrets.PROD_DB_PORT }}
+          PROD_DB_USERNAME: ${{ secrets.PROD_DB_USERNAME }}
+          PROD_DB_PASSWORD: ${{ secrets.PROD_DB_PASSWORD }}
+          PROD_DB_NAME: ${{ secrets.PROD_DB_NAME }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
   build:
     needs: test
