--- a/backend/accessra_microservice/sonar-project.properties
+++ b/backend/accessra_microservice/sonar-project.properties
@@ -1,2 +1,2 @@
-sonar.projectKey=ChillBroh_Accessra-API
-sonar.organization=chillbroh
+sonar.projectKey=X-pose_Accessra-Microservice---CTSE-Assignment
+sonar.organization=x-pose
