--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -163,7 +163,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Download task definition
-        run: aws ecs describe-task-definition --task-definition accessra_app --query taskDefinition --output json > task-definition.json
+        run: aws ecs describe-task-definition --task-definition accessra_task --query taskDefinition --output json > task-definition.json
 
       - name: Install jq
         run: sudo apt-get install -y jq
